<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <View
        android:id="@+id/cart_product_item"
        style="@style/ContainerCartProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"></View>

    <TextView
        android:id="@+id/tv_order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/order"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/order_id"
        android:textColor="#F6A588"
        android:textSize="25dp"
        app:layout_constraintLeft_toRightOf="@id/tv_order_title"
        app:layout_constraintTop_toTopOf="@id/tv_order_title"></TextView>

    <TextView
        android:id="@+id/tv_order_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/order_data"
        android:textColor="#9C9B9B"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_order_title"
        app:layout_constraintTop_toBottomOf="@id/tv_order_id" />

    <TextView
        android:id="@+id/tv_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/order_status"
        android:textColor="#14E07E"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tv_order_title"
        app:layout_constraintTop_toBottomOf="@id/tv_order_data" />

    <TextView
        android:id="@+id/tv_order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/order_total"
        android:textColor="#604D4D"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>