<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg_color"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="57dp">

        <!--   Header     -->
        <RelativeLayout
            android:id="@+id/containerNavbar"
            android:layout_width="match_parent"
            android:layout_height="42dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <!--   Header     -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/containerNavbar">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:text="@string/do_not_have_account"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title"
                    android:layout_centerHorizontal="true"
                    android:text="@string/click_to_sing_up"
                    android:textColor="#FFA8A8"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/container_et_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_subtitle"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/email"
                    android:textColorHint="#604D4D"
                    app:boxStrokeColor="#F5A4A4"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    app:startIconDrawable="@drawable/icon_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/container_et_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container_et_email"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/password"
                    android:textColorHint="#604D4D"
                    app:boxStrokeColor="#F5A4A4"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/icon_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container_et_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/btn_rounded_format_white"
                    android:text="@string/btn_enter" />

                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_login"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/btn_rounded_format_white"
                    android:text="@string/btn_sing_up"
                    android:theme="@style/Theme.ButtonPink" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</FrameLayout>