<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <View
            android:id="@+id/cart_product_item"
            style="@style/ContainerCartProduct"
            android:layout_width="match_parent"
            android:layout_height="150dp"></View>

    <ImageView
        android:id="@+id/iv_product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bath_kit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="27dp"
            android:text="@string/product_name"
            android:textColor="#604D4D"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_product_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/product_price"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_product_image"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toRightOf="@id/iv_product_image"
            app:layout_constraintTop_toBottomOf="@id/tv_product_price">

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_minus_bg"
                android:padding="0dp"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_product_quantity"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/btn_minus"
                android:background="@drawable/tv_quantity_bg"
                android:padding="4dp"
                android:text="@string/product_quantity"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/tv_product_quantity"
                android:background="@drawable/btn_plus_bg"
                android:padding="0dp"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_btn_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_close"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="120dp"
            android:text="@string/subtotal_price"
            android:textColor="#604D4D"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

